LabSoaService1/src/main/java/com/example/labsoaservice1/application/error/model/ErrorType.java
package com.example.labsoaservice1.application.error.model;

public enum ErrorType {
    APP,
    DATA_BASE
}
